
The SSL handshake timeout can now be configured using the `micronaut.ssl.handshakeTimeout` and `micronaut.http.client.ssl.handshakeTimeout` configurations for the server and client respectively.

=== Module Upgrades

==== Micronaut Data 3.2.0

- Repositories with JPA Criteria API specification for Micronaut JDBC/R2DBC
- Expandable query parameters optimizations

== 3.1.0

=== Core Features

==== Primitive Beans

<<factories, Factory Beans>> can now create beans that are primitive types or primitive array types.

See the section on <<factories, Primitive Beans and Arrays>> in the documentation for more information.

==== Repeatable Qualifiers

<<qualifiers, Qualifiers>> can now be repeatable (an annotation annotated with `java.lang.annotation.Repeatable`) allowing narrowing bean resolution by a complete or partial match of the qualifiers declared on the injection point.

==== InjectScope

A new ann:context.annotation.InjectScope[] annotation has been added which destroys any beans with no defined scope and injected into a method or constructor annotated with `@Inject` after the method or constructor completes.

==== More Build Time Optimizations

Further build time metadata optimizations have been added included reducing the number and size of the classes generated to support <<introspection, Bean Introspection>> and including knowledge of repeatable annotations in generated metadata avoiding further reflective calls and optimizing Micronaut's memory usage, in particular with GraalVM.

==== Improvements to Context Propagation

Support for <<context,Reactive context propagation>> has been further improved by inclusion of request context information in the https://projectreactor.io/docs/core/release/reference/#context[Reactor context] and <<kotlinContextPropagation, documentation on how to effectively propagate the context across reactive flows>> when using Kotlin coroutines.

==== Improvements to the Element API
